# paddle_usage

./: .gitignore  CMakeLists.txt  README.md
classify/: CMakeLists.txt  infer_cls_api.cc  infer_cls_onnx_openvino.cc  infer_cls_openvino.cc
detection/: CMakeLists.txt  infer_det_api.cc
ocr/: CMakeLists.txt  infer_ocr_cls_api.cc  infer_ocr_det_api.cc  infer_ocr_pipeline_api.cc  infer_ocr_rec_api.cc
segmentation/: CMakeLists.txt  infer_seg_api.cc
